Create makefiles for GPU+CPU and CPU-only versions. Also make OpenCV optional specified and defined in the indices.hpp file

--- a/makefile.gpu_cpu
+++ b/makefile.gpu_cpu
@@ -1,7 +1,8 @@
-CUDADIR ?= /gpfs/runtime/opt/cuda/11.1.1/cuda
-INC=-I${CUDADIR}/include
-LIBDIR=-L${CUDADIR}/lib64
-LIB=-lcudart
+CUDADIR ?= /gpfs/runtime/opt/cuda/11.8.1/cuda
+OPENCVDIR ?= /gpfs/data/bkimia/cchien3/opencv_install_CH_test
+INC=-I${CUDADIR}/include -I${OPENCVDIR}/include/opencv4
+LIBDIR=-L${CUDADIR}/lib64 -L${OPENCVDIR}/lib64
+LIB=-lcudart -lopencv_core -lopencv_imgcodecs -lopencv_highgui
 
 OPENMP = -fopenmp
 
@@ -9,14 +10,14 @@ NVCCFLAGS  = -O3  -Xcompiler "-fPIC -Wall -Wno-unused-function -Wno-strict-alias
 NVCCFLAGS += -gencode arch=compute_70,code=sm_70
 NVCCFLAGS += -gencode arch=compute_80,code=sm_80
 
-toed: main.o cpu_toed.o gpu_convolve.o gpu_nms.o form_curvelet_main.o
-	g++ ${INC} ${OPENMP} -o TOED main.o cpu_toed.o gpu_convolve.o gpu_nms.o form_curvelet_main.o ${LIBDIR} ${LIB}
+toed_gpu_cpu: main_gpu_cpu.o cpu_toed.o gpu_convolve.o gpu_nms.o form_curvelet_main.o
+	g++ ${INC} ${OPENMP} -o TOED main_gpu_cpu.o cpu_toed.o gpu_convolve.o gpu_nms.o form_curvelet_main.o ${LIBDIR} ${LIB}
 
-main.o: main.cpp
-	g++ ${OPENMP} -c main.cpp -O3 -o main.o
+main_gpu_cpu.o: main_gpu_cpu.cpp
+	g++ ${INC} ${OPENMP} -c main_gpu_cpu.cpp -O3 -o main_gpu_cpu.o
 
 cpu_toed.o: cpu_toed.cpp
-	g++ ${OPENMP} -c cpu_toed.cpp -O3 -o cpu_toed.o
+	g++ ${INC} ${OPENMP} -c cpu_toed.cpp -O3 -o cpu_toed.o
 
 #form_curvelet_main.o: ./curvelet/form_curvelet_main.cpp ./curvelet/curvelet.cpp ./curvelet/curveletmap.cpp ./curvelet/CC_curve_model_3d.cpp ./curvelet/form_curvelet_process.cpp 
 #	g++ ${OPENMP} -c ./curvelet/form_curvelet_main.cpp ./curvelet/curvelet.cpp ./curvelet/curveletmap.cpp ./curvelet/CC_curve_model_3d.cpp ./curvelet/form_curvelet_process.cpp -O3 -o form_curvelet_main.o
